# summer_school_24

./: .gitignore  CMakeLists.txt  README.md  ss_poe.sln  ss_poe.vcxproj  ss_poe.vcxproj.filters  ss_sqs.vcxproj  ss_sqs.vcxproj.filters  ss_tot.vcxproj
poe/: .gitignore  ss_poe.vcxproj.filters
poe/src/: main.cpp
poe/src/darr/: darr.cpp  darr.h
poe/src/poe/: poe.h  poe_compare.cpp  poe_compare.h  poe_core.cpp  poe_core.h  poe_generator.h  poe_generator2.h  poe_sort.cpp  poe_sort.h
poe/test/: 12.txt  12_short.txt
sqs/: Doxyfile  ss_sqs.sln  ss_sqs.vcxproj  ss_sqs.vcxproj.filters
sqs/src/: main.cpp
sqs/src/app/: app.cpp  app.h  app_client.cpp  app_help.cpp
sqs/src/app/executor_impl/: app_executor_impl.cpp
sqs/src/cli/: cli.h
sqs/src/sqs/: sqs.cpp  sqs_common.h
src/: __sqs_unit_test.c  __sqs_unit_test.h  main.c  main.cpp  sqs.c  sqs.h  sqs_common.h  sqs_main.c  stk.cpp  stk.h  stk_hash.cpp  stk_hash.h
src/app/: app.h  app_client.cpp  app_daemon.cpp  app_executor.cpp
src/app/executor_impl/: app_executor_impl.h  app_executor_impl_signal.cpp
src/app/executor_interface/: app_executor_interface.cpp  app_executor_interface.h
src/cli/: cli.c  cli.cpp  cli.h  cli_parameter_iterator.c  cli_parameter_iterator.cpp
src/darr/: darr.c  darr.cpp  darr.h
src/poe/: poe.c  poe.h  poe_compare.c  poe_compare.cpp  poe_compare.h  poe_core.c  poe_core.cpp  poe_core.h  poe_generator.c  poe_generator.cpp  poe_generator.h  poe_generator2.cpp  poe_generator2.h  poe_onegin_generator.cpp  poe_onegin_generator.h  poe_sort.c  poe_sort.cpp  poe_sort.h
src/sqs/: __sqs_unit_test.c  __sqs_unit_test.h  sqs.c  sqs.h  sqs_common.h  sqs_solver.h
src/sqs/test/: sqs_test.cpp  sqs_test.h  sqs_test_set.cpp
stk/: CMakeLists.txt
test/: 1984.txt  cloud.txt  test.sqt
tot/: ss_tot.sln
tot/src/: main.c
(+1 files in other folders)
